# oscirs

./: .gitignore  Cargo.toml  README.md
oscirs_linalg/: Cargo.toml  README.md
oscirs_linalg/src/: calculator.rs  err.rs  lib.rs  matrix.rs  memory.rs
oscirs_plot/: Cargo.toml  README.md
oscirs_plot/src/: err.rs  lib.rs  style.rs  svgfigure.rs  svgstyle.rs
oscirs_plot/src/svg/: bar.rs  histogram.rs  mod.rs  scatterline.rs
oscirs_stats/: Cargo.toml  README.md
oscirs_stats/src/: lib.rs  stats_vec.rs  summaries.rs  vector.rs
src/: err.rs  lib.rs  math.rs  vector.rs
src/stats/: mod.rs  t_test.rs
tests/: core_tests.rs  docs_tests.rs  integration_tests.rs  linalg_tests.rs  plot_tests.rs  stat_tests.rs
