[package]
name = "oscirs"
version = "0.1.1"
edition = "2021"
description = "Scientific computing environment for Rust"
readme = "README.md"
homepage = "https://github.com/i-saac/oscirs"
repository = "https://github.com/i-saac/oscirs"
documentation = "https://docs.rs/oscirs/latest/oscirs/"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oscirs_linalg = { version = "0.2.0-alpha", path="oscirs_linalg" }
oscirs_plot = { version = "0.1.1", path="oscirs_plot" }
oscirs_stats = { version = "0.1.1", path="oscirs_stats" }