[package]
name = "oscirs_plot"
version = "0.2.0"
edition = "2021"
description = "Plotting crate for scientific computing"
readme = "README.md"
homepage = "https://github.com/i-saac/oscirs"
repository = "https://github.com/i-saac/oscirs"
documentation = "https://docs.rs/oscirs_plot/latest/oscirs_plot/"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "4.1.0"