[package]
name = "oscirs_stats"
version = "0.1.0"
edition = "2021"
description = "Statistical analysis crate for scientific computing"
readme = "README.md"
homepage = "https://github.com/i-saac/oscirs"
repository = "https://github.com/i-saac/oscirs"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
