[package]
name = "oscirs_stats"
version = "0.1.1"
edition = "2021"
description = "Statistical analysis crate for scientific computing"
readme = "README.md"
homepage = "https://github.com/i-saac/oscirs"
repository = "https://github.com/i-saac/oscirs"
documentation = "https://docs.rs/oscirs_stats/latest/oscirs_stats/"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
